--- a/semantics_4_20/Cargo.toml
+++ b/semantics_4_20/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "semantics_4_20"
 version = "0.1.0"
-authors = ["m0riiiii <rewop.ecnalab.x2@gmail.com>"]
+authors = ["root"]
 
 [dependencies]
