--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,8 @@ name: test
 on: push
 jobs:
   test:
+    name: this is test
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: echo
